# pydap_extras

./: .gitignore  NEWS.md  NEWS.rst  Pipfile  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_requirements.txt
.devcontainer/: devcontainer.json  post-install.sh  post-start.sh
.github/workflows/: black.yml  pypi-publish.yml  python-ci.yml
pydap_extras/: app.py  pupynere.py
pydap_extras/handlers/: csv.py  hdf5.py  pcic.py  sql.py  stack_slice.py
pydap_extras/responses/: aaigrid.py  netcdf.py  xlsx.py
tests/: conftest.py  test_aaigrid_responses.py  test_csv_handlers.py  test_hdf4_handlers.py  test_netcdf_responses.py  test_pcic_handlers.py  test_sql_handlers.py  test_stack_slice.py  test_xlsx_responses.py
tests/data/: tiny_bccaq2_wo_recvars.nc
