[[tool.poetry.source]]
name = "pcic-pypi"
url = "https://pypi.pacificclimate.org/simple/"
priority = "supplemental"

[tool.poetry]
name = "pydap-extras"
version = "1.1.1"
description = "PCIC Pydap handlers and Responses for Python 3"
authors = [
    "Cairo Sanders <cairosanders@uvic.ca>",
    "Lee Zeman <lzeman@uvic.ca>",
    "Rod Glover <rglover@uvic.ca>",
    "Nik Radoš",
]
readme = "README.md"
homepage = "http://www.pacificclimate.org/"
repository = "https://github.com/pacificclimate/pydap-extras"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
packages = [
    {include = "pydap_extras"},
    {include = "tests"},
]

[tool.poetry.group.initial.dependencies]
# These dependencies must be installed before those in any other groups,
# including the main dependencies. This is required to install GDAL 3.0.4.
pip = "22.3.1"
setuptools = "<58"
numpy = "<=1.21"  # Required by GDAL 3.0.4, but not declared in that package

[tool.poetry.dependencies]
# TODO: Python 3.8 is due to go EOL in less than a year. numpy latest won't install
#   in Py 3.8. Consider upping to 3.9 or later.
python = "^3.8"
gdal = "==3.0.4"
Pydap = "^3.2.2"
pycds = { version = "^4.4.0",  source = "pcic-pypi" }
pupynere-pdp = { version = "^2.0.1",  source = "pcic-pypi" }
requests = "^2.31.0"
SQLAlchemy = "^1.4.3"
PyYAML = "*"
h5py = "^3.10.0"
paste = "^3.7.1"
XlsxWriter = "^3.1.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
black = "20.8b1"
testing-postgresql = "^1.3.0"
netCDF4 = "^1.6.5"

# To make pydap aware of the new handlers and responses defined in this package,
# they have to be defined as entry points.
# Poetry "plugins" are a way to expose arbitrary entry points. It is similar to
# the entry points feature of setuptools, e.g., `setuptools.setup(entry_points=...)`.
# See https://python-poetry.org/docs/pyproject/#plugins

[tool.poetry.plugins]  # Optional super table ... why?

[tool.poetry.plugins."pydap.handler"]
sql = "pydap_extras.handlers.sql:SQLHandler"
csv = "pydap_extras.handlers.csv:CSVHandler"
rsql = "pydap_extras.handlers.pcic:RawPcicSqlHandler"
csql = "pydap_extras.handlers.pcic:ClimoPcicSqlHandler"
hdf5 = "pydap_extras.handlers.hdf5:HDF5Handler"

[tool.poetry.plugins."pydap.response"]
nc = "pydap_extras.responses.netcdf:NCResponse"
xlsx = "pydap_extras.responses.xlsx:XLSXResponse"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
